Update css  content

--- a/css/main.html
+++ b/css/main.html
@@ -28,3 +28,65 @@ body {
   margin-top: .3rem;
   margin-bottom: 1.3rem;
 }
+
+.card-img img {
+  width: 50px;
+  display: block;
+  margin: auto;
+  font-size: 0;
+  padding: 0;
+}
+
+.card-body h2 {
+  font-weight: normal;
+  margin: 1.8rem 0 0 .5rem;
+}
+
+.card-body p {
+  margin: 0 0 1.8rem .5rem;
+}
+
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
+  .card {
+    display: inline-block;
+    max-width: 30%;
+  }
+
+}
+
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  html {
+    font-size: 130%;
+  }
+
+  .card {
+    display: flex;
+    display: inline-block;
+  }
+
+}
